is_official_build = true
# The below lines decide betweenn a lib+dll build and a lib only build (for linking with dll code)
#is_component_build
#extra_cflags = [ "/MD" ]
skia_use_system_expat = false
skia_use_system_harfbuzz = false
skia_use_system_icu = false
skia_use_system_libjpeg_turbo = false
skia_use_system_libpng = false
skia_use_system_libwebp = false
skia_use_system_zlib = false